# coding-questions-telegram-bot

./: .env.default  .flake8  .gitignore  .isort.cfg  .mypy.ini  LICENSE  Makefile  README.md  alembic.ini  ecosystem.config.js  generate_migration.sh  launch.sh  lint.sh  lint_fix.sh  mypy.ini  pyproject.toml  requirements.txt  run_downgrade.sh  run_migrations.sh  setup_db.sh  test.sh
.github/backup/: .gitignore  pg_backup.config  pg_backup.config.default  pg_backup.sh
.github/workflows/: deploy.yml  lint.yml
alembic/: env.py
alembic/versions/: 20210423_163117_create_tables.py  20210424_095735_add_chat_and_belong_table.py  20210502_193742_add_difficulty_to_questionrecord.py  20210503_000626_add_interviewpairs_table.py  20210503_000945_add_started_at_to_interviewpairs_table.py  20210503_001825_add_chat_id_to_interviewpairs_table.py  20210505_154052_add_update_cascades.py  20211208_103055_add_is_opted_out_to_belong_table.py  20220814_233801_add_username_to_user_table.py  20220814_234834_separate_opting_out_into_two_columns.py  4144a10040d0_create_tables.py
backups/: pg_backup.config.default  pg_backup.sh
src/: add.py  add_handlers.py  app.py  chat_handlers.py  config.py  database.py  error.py  exceptions.py  general.py  general_handlers.py  handle_add.py  handle_general.py  logger.py  main.py  pair_handlers.py  schemata.py  services.py  start.py  stats_handlers.py  url.py  utils.py
src/database/: __init__.py  base.py  belong.py  chat.py  interview_pair.py  question_record.py  session.py  user.py
src/handlers/: __init__.py  add_me.py  add_question.py  base.py  cancel.py  chat_created.py  complete_interview.py  error.py  individual_stats.py  left_chat_member.py  members.py  migrate.py  new_chat_members.py  opt_in_out.py  pagination.py  start.py  stats.py  unknown_message.py  view_stats.py
src/helpers/: __init__.py  log.py  pagination.py  question.py
src/services/: __init__.py  belong.py  chat.py  interview_pair.py  question_record.py  user.py
src/utils/: __init__.py  enums.py  exceptions.py  platforms.py  schemata.py  sort.py  time.py  unwrap.py
tests/: test_version.py
