[tool.poetry]
name = "coding-questions-bot"
version = "0.1.0"
description = ""
authors = ["Hanming Zhu <hanming@huawen.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.4.1"
python-dotenv = "^0.17.0"
selenium = "^3.141.0"
webdriver-manager = "^3.4.0"
SQLAlchemy = "^1.4.11"
alembic = "^1.5.8"
Cerberus = "^1.3.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.1"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
