[tool.poetry]
name = "coding-questions-bot"
version = "2.0.0"
description = "Telegram bot to help groups keep members accountable for interview preparation."
authors = ["Hanming Zhu <hanming@huawen.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.0a2"
python-dotenv = "^0.20.0"
selenium = "^4.4.0"
webdriver-manager = "^3.8.3"
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
Cerberus = "^1.3.4"
psycopg2 = "^2.9.3"
pytz = "^2022.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.971"
sqlalchemy-stubs = "^0.4"
types-pytz = "^2022.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
