[tool.poetry]
name = "coding-questions-bot"
version = "0.1.0"
description = "Telegram bot to help groups keep members accountable for interview preparation."
authors = ["Hanming Zhu <hanming@huawen.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.4.1"
python-dotenv = "^1.0.1"
selenium = "^4.21.0"
SQLAlchemy = "^1.4.11"
alembic = "^1.5.8"
Cerberus = "^1.3.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.8.0"
flake8 = "^3.9.1"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
mypy = "^0.812"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
